--- a/changelog/breaking-changes-migrations/breaking-changes.mdx
+++ b/changelog/breaking-changes-migrations/breaking-changes.mdx
@@ -1,201 +1,143 @@
 ---
 title: "Breaking Changes"
-description: "A transparent and explicit list of breaking API or behavioral changes between releases, including removals, incompatible parameter or interface changes, and discontinued platform support. Highlights impacted areas and links to in-depth migration advice."
+description: "Explains critical updates or removals that require user action—such as minimum C++ standard requirements, API removals, or significant behavioral changes. Gives context and rationale for each major-breaking change."
 ---
 
 # Breaking Changes
 
-This page provides a clear and concise catalog of all breaking API or behavioral changes introduced in GoogleMock releases. It focuses on changes that may impact your existing test code, including removals of features, incompatible parameter or interface updates, and discontinued platform support. Detailed migration instructions and advice are linked wherever applicable to guide you through upgrades smoothly.
+This page explains critical updates and removals in GoogleTest and GoogleMock that require user attention and action. These changes impact compatibility, minimum requirements, APIs, behavior, and integration patterns. Understanding these breaking changes ensures smoother upgrades and preserves your test stability.
 
 ---
 
-## 1. Overview of Breaking Changes
+## Minimum C++ Standard Requirement
 
-Breaking changes are modifications in the GoogleMock API or behavior that require users to update their test code or test environments. These changes cannot be automatically adapted to and may cause compile errors or runtime test failures if unaddressed.
+### Increased Baseline to C++17
 
-This page documents such changes in reverse chronological order, emphasizing:
+GoogleTest and GoogleMock now require a minimum compiler support for the **C++17** standard. Compilation with earlier standards (e.g., C++14 or C++11) is no longer supported.
 
-- **Removals:** Deprecated or obsolete features and APIs that have been fully removed.
-- **Incompatible Changes:** Modifications in function signatures, behaviors, or expectations that break backward compatibility.
-- **Platform Support:** Discontinued platform or compiler support that may affect compilation or execution.
+This change reflects the framework's leverage of modern language features for safety, performance, and correctness.
 
-Users should consult the associated migration sections to understand how to fix or adapt their code accordingly.
+**What this means for you:**
+
+- Update your build system to set the C++ standard to C++17 or above (e.g., `-std=c++17` for GCC/Clang).
+- Ensure all compilers and toolchains used for test builds meet this requirement.
+- Refer to the [Prerequisites & System Requirements](../getting-started/setup-prerequisites-installation/prerequisites-system-requirements) page for detailed compatibility and platform notes.
 
 ---
 
-## 2. Recent Breaking Changes
+## Removal of Legacy `MOCK_METHODn` Macros
 
-### 2.1. C++17 Language Standard Enforcement
+The old family of mock method macros (`MOCK_METHOD0`, `MOCK_METHOD1`, ..., `MOCK_CONST_METHOD1_T_WITH_CALLTYPE`, etc.) have been **deprecated and removed** in favor of the unified and more powerful `MOCK_METHOD` macro.
 
-- **Change:** GoogleMock now requires a minimum of **C++17** for both compilation and usage. Older C++ standards are no longer supported.
-- **Impact:** Test suites compiled with prior C++ standards must be upgraded to C++17 or later.
-- **Migration:** Update your build systems (CMake, Bazel, etc.) to use C++17 or newer. This aligns with modern best practices and unlocks language features beneficial for mocking and testing.
+**Impact:**
 
-### 2.2. Unified GoogleTest and GoogleMock Repository
-
-- **Change:** GoogleTest and GoogleMock have been merged into a single consolidated repository.
-- **Impact:** Build configurations and dependencies referencing separate repos must be updated.
-- **Migration:** Migrate to use the unified repository, updating `git` URLs and build target dependencies as per new instructions in [Setup and Installation](https://github.com/google/googletest/blob/main/readme.md#using-googletest).
-
-### 2.3. Revision of `MOCK_METHOD` Macro and Signature Requirements
-
-- **Change:** The `MOCK_METHOD` macro now strictly enforces the correct syntax and modifiers.
-  - Return types or argument types containing commas must be parenthesized.
-  - Only valid specifiers (`const`, `override`, `noexcept`, `Calltype()`, `ref()`) are accepted.
-- **Impact:** Some previously compiling mocks may fail due to stricter checks.
-- **Migration:**
-  - Wrap any return or argument type with unprotected commas in parentheses.
-  - Remove incorrect or unsupported specifiers from the fourth macro parameter.
-  - Refer to the [Defining Mocks](../api-reference/mocking-framework/defining-mocks.md#MOCK_METHOD) for detailed syntax.
-
-### 2.4. Changes in Default Verbosity and Logging Behavior
-
-- **Change:** The default verbosity level for `--gmock_verbose` has changed to `warning`.
-- **Impact:** Existing tests that relied on a different verbosity level may see more or fewer log messages.
-- **Migration:** Adjust verbosity level flags as needed in your test invocation or code to control the amount of mock call tracing or warnings.
-
-### 2.5. Behavior of `EXPECT_CALL` and Search Order of Expectations
-
-- **Change:** Expectation matching now strictly follows the rule that the **last matching expectation overrides earlier ones**.
-- **Impact:** Previously, if expectations were written in a certain order, the mocking behavior might differ; now the latest takes precedence.
-- **Migration:** Reorder `EXPECT_CALL` statements such that more specific expectations come after general ones.
-  - Prefer sequences or chaining `WillOnce()` to express ordered or multiple outcomes clearly.
-  - For example, instead of:
+- All mock classes must migrate to using the new `MOCK_METHOD` macro syntax:
   ```cpp
-  EXPECT_CALL(foo, Bar()).WillOnce(Return(2)).RetiresOnSaturation();
-  EXPECT_CALL(foo, Bar()).WillOnce(Return(1)).RetiresOnSaturation();
-  ```
-  Use:
-  ```cpp
-  {
-    InSequence s;
-    EXPECT_CALL(foo, Bar()).WillOnce(Return(1)).RetiresOnSaturation();
-    EXPECT_CALL(foo, Bar()).WillOnce(Return(2)).RetiresOnSaturation();
-  }
+  // Old:
+  MOCK_METHOD1(Foo, bool(int x));
+
+  // New:
+  MOCK_METHOD(bool, Foo, (int x), (override));
   ```
 
-### 2.6. Removal of Old-Style `MOCK_METHODn` Macros
-
-- **Change:** The legacy `MOCK_METHODn` and `MOCK_CONST_METHODn` macros are deprecated and removed in the latest major versions.
-- **Impact:** Codebases still using these old macros will fail to compile.
-- **Migration:** Update to use the modern `MOCK_METHOD` macro with the signature-based parameters as described in [Defining Mocks](../api-reference/mocking-framework/defining-mocks.md).
-
-### 2.7. Strictness Wrappers and Uninteresting Calls
-
-- **Change:** Introduction and standardization around strictness wrapper classes, e.g., `NiceMock`, `NaggyMock`, and `StrictMock`.
-- **Impact:** Behavior of uninteresting calls is now configurable, which may affect legacy test results.
-- **Migration:** Adopt `NiceMock` or `StrictMock` per test needs to control warnings versus failures on uninteresting calls. See [Strictness & Mock Behavior Modifiers](../api-reference/mocking-framework/strictness-and-behavior-modifiers.md).
-
-### 2.8. `ON_CALL` and `EXPECT_CALL` Decoupling
-
-- **Change:** `ON_CALL` is purely for setting default behavior and does not suppress warnings about unexpected calls unless accompanied by `EXPECT_CALL`.
-- **Impact:** Tests relying on `ON_CALL` suppressing warnings need adjustments.
-- **Migration:** To suppress warnings, add explicit catch-all `EXPECT_CALL(...).Times(AnyNumber())` statements.
-
-### 2.9. Platform and Compiler Support Changes
-
-- **Dropped:** Support for Visual C++ versions earlier than 2015.
-- **Dropped:** Some mobile and embedded platforms lacking requisite OS features.
-- **Migration:** Upgrade your development environment to supported compiler versions and platforms as per the [Supported Platforms](../overview/features-and-getting-started/supported-platforms-and-integrations.md) documentation.
+- The new macro fully supports qualifiers, call types, reference qualifiers, and move-only types.
+- For guidance on migration, see the [Mock Class and Method APIs](/api-reference/mocking-and-matcher-api/mock-methods-api) and [gMock Cookbook](../docs/gmock_cook_book.md).
 
 ---
 
-## 3. Migration Guidance
+## Strict Enforcement of Mock Method Access
 
-For each breaking change, GoogleMock provides migration advice and examples. Some key suggestions:
+All mock methods defined by `MOCK_METHOD` **must reside within the `public:` section** of the mock class, even if the original method in the base class is `protected` or `private`.
 
-### 3.1. Code Syntax and Signature Adjustments
+Failing to do this may cause compilation or runtime linkage errors.
 
-- Parenthesize complicated types in `MOCK_METHOD`.
-- Remove invalid specifiers.
-- Use modern `MOCK_METHOD` syntax instead of legacy macros.
-
-### 3.2. Expectation Ordering
-
-- Place more specific expectations after general ones.
-- Use `InSequence` to enforce call ordering.
-- Use `.RetiresOnSaturation()` to mark expectations as retired after saturation when needed.
-
-### 3.3. Managing Verbosity and Logs
-
-- Modify `--gmock_verbose` as `info`, `warning`, or `error` to control output.
-- Use `NiceMock` or `StrictMock` for controlling handling of uninteresting calls.
-
-### 3.4. Environment Upgrades
-
-- Upgrade compiler to at least Visual C++ 2015 or Clang/GCC with C++17 support.
-- Review build integration to align with the unified GoogleTest/GoogleMock repository.
+This policy is now strictly enforced.
 
 ---
 
-## 4. References and Next Steps
+## Behavior Changes in Mock Strictness Wrappers
 
-- [Defining Mocks](../api-reference/mocking-framework/defining-mocks.md) — for syntax and macro usage updates.
-- [Setting Expectations](../api-reference/mocking-framework/setting-expectations.md) — for changes in expectation semantics.
-- [Strictness & Mock Behavior Modifiers](../api-reference/mocking-framework/strictness-and-behavior-modifiers.md) — to control warnings and errors on uninteresting calls.
-- [Supported Platforms](../overview/features-and-getting-started/supported-platforms-and-integrations.md) — for environment requirements.
-- [gMock Cookbook](../docs/gmock_cook_book.md) — practical recipes, including handling new macros and patterns.
-- GoogleMock [Release Notes](https://github.com/google/googletest/releases) on GitHub for version-specific changes and migration guides.
+The semantic differences amongst the mock wrappers `NiceMock<T>`, `NaggyMock<T>`, and `StrictMock<T>` are now enforced more consistently.
+
+- **NiceMock**: Suppresses warnings on uninteresting calls.
+- **NaggyMock**: Default mock behavior printing warnings on uninteresting calls.
+- **StrictMock**: Reports uninteresting calls as **errors**, failing tests.
+
+Make sure you select the appropriate wrapper for your mock objects to reflect your testing intent.
 
 ---
 
-## 5. Troubleshooting Common Breaking Change Issues
+## Deprecated Mocking Features and APIs
+
+Some APIs and mocking techniques that were supported for legacy reasons are now deprecated or removed.
+
+Examples include:
+
+- Mocking non-virtual functions only through `MOCK_METHOD` syntax on unrelated classes with explicit template usage, replacing older patterns.
+- Removal of support for the old macro-based `ACTION*` macros in favor of modern lambda or functor-based actions.
+
+Refer to the following documentation for updated guidelines:
+
+- [Mock Methods API](/api-reference/mocking-and-matcher-api/mock-methods-api)
+- [Actions Reference](/api-reference/mocking-and-matcher-api/actions-api)
+- [gMock Cookbook](../docs/gmock_cook_book.md)
+
+---
+
+## Changes in Default Behavior and Warnings
+
+GoogleMock now emits more explicit diagnostics for uninteresting and unexpected mock method calls.
+
+- The new default for output verbosity is `warning` level, which omits some detailed stack traces but highlights unmatched calls.
+- You can control this verbosity with the `--gmock_verbose` flag (values: `info`, `warning`, `error`).
+
+Adjust your CI/build configurations accordingly to manage noise vs. information.
+
+---
+
+## Compiler and Platform Support
+
+The minimum supported versions for compilers have been increased, reflecting requirements to support C++17.
+
+- Microsoft Visual C++ requires at least Visual Studio 2017 (version 15) or newer.
+- GCC and Clang minimum versions align with those supporting C++17 effectively.
+
+Cross-platform portability layers have been updated accordingly.
+
+Check the [Prerequisites & System Requirements](../getting-started/setup-prerequisites-installation/prerequisites-system-requirements) document for details.
+
+---
+
+## Migration Recommendations
+
+To handle breaking changes smoothly:
+
+1. **Verify your build environment** meets the new requirements (C++17 standard, compiler version).
+2. **Refactor mock classes** to replace deprecated macros with the `MOCK_METHOD` macro.
+3. **Review mock wrapper usage** (`NiceMock`, `StrictMock`, etc.) to ensure intended behavior.
+4. **Audit test code** for deprecated APIs or practices, such as old `ACTION` macros or legacy mocking styles.
+5. **Use `RetiresOnSaturation()` appropriately** to avoid sticky expectations causing unexpected failures.
+
+For detailed guidance, consult the [Migration Guides](/changelog/breaking-changes-migrations/migration-guides) and [Breaking Changes](/changelog/breaking-changes-migrations/breaking-changes) pages.
+
+---
+
+## Additional Resources
+
+- [Mocking Reference](../docs/reference/mocking.md): Comprehensive reference on mock macros and classes.
+- [gMock for Dummies](../docs/gmock_for_dummies.md): A beginner-friendly gMock introduction.
+- [gMock Cookbook](../docs/gmock_cook_book.md): Practical recipes for common mocking tasks.
+- [API Reference - Mock Methods](../api-reference/mocking-and-matcher-api/mock-methods-api): Details on the `MOCK_METHOD` macro and usage.
+- [API Reference - Actions](../api-reference/mocking-and-matcher-api/actions-api): Built-in and custom actions for mocks.
+
+---
 
 <Tip>
-If after upgrading your tests fail to compile due to `MOCK_METHOD` syntax errors or warnings related to virtual methods, please carefully check all your mock class definitions for:
-
-- Unparenthesized types with commas.
-- Deprecated macro usage.
-- Use of invalid specifiers in mock method declarations.
-
-Correcting these will resolve most common compilation issues.
+Keep your test codebase up-to-date with these breaking changes to avoid subtle bugs during upgrades. Carefully migrating your mocks and setting appropriate compiler standards upfront will save time and reduce test failures.
 </Tip>
 
-<Tip>
-Unexpected test failures related to mock expectations often result from improper ordering of `EXPECT_CALL`s or misunderstanding of default actions. Use `InSequence` and `.RetiresOnSaturation()` clauses to more precisely control the expectation lifecycle.
-</Tip>
-
-<Note>
-Run your tests with `--gmock_verbose=info` to trace mock function call matching and gain insights on how expectations are evaluated and why some expectations may not be satisfied.
-</Note>
+<Warning>
+Ignoring the minimum C++17 requirement or continuing to use deprecated mocking constructs will lead to build failures and unstable test behavior.
+</Warning>
 
 ---
-
-## 6. Summary Diagram of Expectation Matching Behavior
-
-```mermaid
-sequenceDiagram
-  participant T as Test Code
-  participant M as Mock Object
-  participant E as Expectations
-
-  T->>M: Call mock method with args
-  M->>E: Search expectations (last to first)
-  alt Match found and active
-    E->>M: Perform associated action
-    M->>T: Return action result
-  else No match
-    M->>T: Default action or failure
-  end
-
-  Note over E: Last matching expectation takes precedence,
-  Note over E: expectations retire upon saturation if specified
-```
-
-This diagram emphasizes the reverse-order search and sticky nature of expectations, which are fundamental to understanding breaking changes related to `EXPECT_CALL` semantics.
-
----
-
-## 7. Contact and Support
-
-For further assistance:
-
-- Consult the [GoogleMock FAQ](../faq/core-questions/usage-common-issues.md) for common problems.
-- Join community discussions and developer forums linked from the main GoogleTest repository.
-- File issues or seek help on GitHub: https://github.com/google/googletest/issues
-
----
-
-_All breaking changes are committed with explicit commit messages referencing migration notes. Always review release notes carefully before upgrading._
-
-<Source url="https://github.com/google/googletest" branch="main" paths={[{"path": "docs/breaking-changes.md", "range": "1-100"}]} />
