--- a/changelog/breaking-changes-migrations/deprecations.mdx
+++ b/changelog/breaking-changes-migrations/deprecations.mdx
@@ -1,126 +1,160 @@
 ---
-title: "Deprecation Notices"
-description: "Keep users informed about features, APIs, or platforms scheduled for removal with each release. Offer timelines, rationale, and migration pathways to future-proof project dependencies and maintainability."
+title: "Deprecations"
+description: "Lists all deprecated APIs, features, and build configurations, along with timelines and suggested alternatives. Helps users proactively refactor their codebase before features are removed."
 ---
 
-# Deprecation Notices
+# Deprecations
 
-This section is dedicated to keeping users informed about features, APIs, or platforms within GoogleTest and GoogleMock that are scheduled for removal or no longer recommended for use. Understanding deprecations is essential for future-proofing your projects, maintaining compatibility, and ensuring smooth migrations.
+This page provides a comprehensive list of all deprecated APIs, features, and build configurations in GoogleTest and GoogleMock. It serves as an essential resource to help you proactively identify deprecated elements in your codebase, understand their planned removal timelines, and discover recommended alternatives. By referencing this page, you can efficiently plan and execute refactoring efforts to maintain compatibility and leverage the latest framework improvements.
 
 ---
 
-## Understanding Deprecation in GoogleTest and GoogleMock
+## Why Monitor Deprecations?
 
-Deprecation is a formal notification that a particular feature, API, or platform support will be phased out in future releases. GoogleTest and GoogleMock provide advance warnings about deprecated items, explaining why they are deprecated and offering guidance for migration.
+GoogleTest and GoogleMock evolve continuously to improve usability, performance, and maintainability. This evolution sometimes requires deprecating older APIs or configurations, which:
 
-As a user, you should take these notices seriously to:
+- May become unsupported in future releases.
+- Could cause compilation warnings or errors in the latest C++ standards.
+- Often have safer or more efficient alternatives.
 
-- Avoid relying on soon-to-be-removed features.
-- Prepare your codebase ahead of time by adopting alternatives.
-- Ensure longer-term maintainability and compatibility.
+Monitoring deprecations ensures your test code remains robust, future-proof, and compatible with modern C++ practices.
 
+---
 
-## Types of Deprecation Notices
+## Categories of Deprecations
 
-### 1. Deprecated Macros and APIs
+### 1. Mocking Macros and Methods
 
-Certain assertion or mocking macros may be deprecated in favor of newer, more consistent, or safer alternatives. For instance, older versions of `MOCK_METHODn` macros have been superseded by the generic `MOCK_METHOD` macro for better type safety and flexibility.
+The transition from the old `MOCK_METHODn` macros family to the unified and improved `MOCK_METHOD` macro is a key deprecation effort aimed at simplifying mocking syntax and enhancing versatility.
 
-**Action**: Update your mocks to use the current preferred macros. For example, convert
+- **Deprecated:** `MOCK_METHOD0`, `MOCK_METHOD1`, ..., `MOCK_CONST_METHODn`, and related variants.
 
+- **Recommended:** Use the generic `MOCK_METHOD(ReturnType, MethodName, (Args...), (Qualifiers))` macro.
+
+- **Explanation:** The generic macro supports constness, noexcept, reference qualifiers, and call types in a single, flexible interface.
+
+**Example Migration:**
 ```cpp
+// Old style - deprecated
 MOCK_METHOD1(Foo, bool(int));
+MOCK_CONST_METHOD2(GetValue, int(int, int));
+
+// New style - recommended
+MOCK_METHOD(bool, Foo, (int), (override));
+MOCK_METHOD(int, GetValue, (int, int), (const, override));
 ```
 
-into
+---
 
+### 2. Mock Strictness Wrappers
+
+To control how uninteresting calls are handled on mock objects, GoogleMock offers three wrappers:
+
+- `NiceMock<T>` suppresses warnings on uninteresting calls.
+- `NaggyMock<T>` (default behavior) warns on uninteresting calls.
+- `StrictMock<T>` treats uninteresting calls as errors.
+
+While `NaggyMock` remains the standard, newly introduced or legacy methods related to strictness handling may be subject to deprecation in future versions. Users should align with the established usage patterns described below.
+
+**Best Practice:**
 ```cpp
-MOCK_METHOD(bool, Foo, (int));
+using ::testing::NiceMock;
+using ::testing::StrictMock;
+
+NiceMock<MockClass> nice_mock;    // Suppresses warnings
+StrictMock<MockClass> strict_mock;  // Fails on uninteresting calls
 ```
 
-Refer to the [Mocking Reference](../api-reference/core-apis/mocking.md#macros) and [gMock Cookbook](../guides/writing-and-running-tests/gmock_cook_book.md#Old-Style-MOCK_METHODn-Macros) for details.
+*Note:* These wrappers only affect mock methods defined *directly* in the mock class using `MOCK_METHOD`. Methods mocked in base classes might be unaffected. Ensure virtual destructors exist in your mock classes for reliable behavior.
 
 ---
 
-### 2. Interface and Class Changes
+### 3. Build and Compiler Requirements
 
-Some classes or interfaces may evolve, deprecating certain methods or behaviors. For example, certain matchers or action interfaces might be replaced by more efficient or expressive versions.
+- **Minimum C++ Standard:** GoogleTest now requires C++17 as the minimum supported version. Projects using older standards should update compilation flags accordingly.
 
-**Action**: Review your use of interfaces and update to the latest recommended patterns, such as using polymorphic matchers defined via the `MATCHER` macros or `MATCHER_P` for parameterized matchers.
+- **Compiler Support:** Legacy support for outdated compilers (such as Visual C++ versions older than 2015) has been dropped.
 
----
+- **Deprecated Build Options:** Certain build flags and macros related to legacy platform support or runtime settings have been removed or marked deprecated.
 
-### 3. Platform or Compiler Support
-
-GoogleTest provides wide-ranging platform support, but occasionally support for specific platforms, compilers, or language dialects may be deprecated due to low usage or unmaintainability.
-
-**Action**: Confirm your development environment's compatibility regularly and review the [Supported Platforms & Requirements](../../overview/integration-ecosystem/supported-platforms) page to ensure ongoing support.
+*Tip:* Ensure your build system enforces C++17 and use the modern recommended compiler versions for a smooth experience.
 
 ---
 
-## Deprecation Timelines and Migration Paths
+### 4. API Elements
 
-A well-defined timeline accompanies each deprecation notice to give users ample time for migration. The typical flow involves:
+- Some older mock method control macros, deprecated matchers, or utility functions may have been marked deprecated to encourage use of newer, more consistent alternatives.
 
-1. **Announcement**: Deprecation is announced in Release Highlights and changelog pages without removal.
-2. **Warning**: Compilation or runtime warnings may be introduced to alert developers.
-3. **Removal**: The deprecated feature is removed after one or more release cycles.
+- For instance, earlier specialized mock macros for class templates or call type specifications are superseded by the generic `MOCK_METHOD` and respective qualifiers.
 
-We encourage users to adopt the following migration process:
-
-- **Stay Updated**: Regularly check the changelog, release notes, and deprecation notices.
-- **Plan Migration**: Incorporate updates into your development schedule.
-- **Test Thoroughly**: Use GoogleTest's own mechanisms to validate changes.
-- **Seek Guidance**: Use the Upgrade & Migration Guides and relevant documentation.
-
-For example, when moving between major versions, consult the [Upgrade & Migration Guides](../changelog/breaking-changes-migrations/upgrade-guides) for detailed instructions.
-
-
-## How Deprecations Affect Your Tests
-
-GoogleTest and GoogleMock typically maintain backward compatibility for minor versions, but deprecated constructs should be avoided.
-
-- **Mocking API**: Deprecated mocking macros or conventions should be revised to avoid future breakage.
-- **Assertion Macros**: Prefer `EXPECT_` and `ASSERT_` macros documented as current.
-- **Matchers and Actions**: Adopt modern, polymorphic matcher and action patterns.
-
-Deprecated behaviors may cause warnings during compilation or test runs, but tests will continue to run until removal.
+- Deprecated APIs will generate compile-time warnings describing alternatives to simplify migration.
 
 ---
 
-## Practical Tips to Handle Deprecation
+## Suggested Alternatives and Migration Paths
 
-- **Proactively Refactor**: When you see a deprecation, prioritize refactoring
-  rather than delaying.
-- **Use Static Analysis Tools**: Tools or linters may catch deprecated usage.
-- **Suppress Warnings Judiciously**: Only when you are certain the deprecated usage is harmless short-term.
-- **Automated Testing**: Run your test suites with GoogleTest's latest version early to catch issues.
+- Replace all old `MOCK_METHODn*` macros with the unified `MOCK_METHOD` macro.
+
+- Use `EXPECT_CALL` and `ON_CALL` as per current best practices for expectation management.
+
+- For controlling uninteresting calls, use `NiceMock` or `StrictMock` as appropriate.
+
+- Upgrade your build environment to support C++17 or later.
+
+- Review and remove deprecated compiler flags and macros no longer supported.
+
+- Consult the [Breaking Changes](https://github.com/google/googletest/blob/main/docs/changelog/breaking-changes-migrations/breaking-changes.md) page for detailed migration guidance.
 
 ---
 
-## Troubleshooting Common Deprecation Issues
+## How This Page Fits Into the Documentation
 
-<Tip>
-If you encounter unexpected failures or warnings related to deprecated features during test runs or compile time, verify:
+This `Deprecations` page works in conjunction with:
 
-- That your code does not mix deprecated and current APIs.
-- All mocks are defined with current `MOCK_METHOD` macros.
-- Your build environment complies with new compiler standards (C++17+ required).
-- Warnings are addressed rather than ignored.
+- **Breaking Changes Page:** For critical changes that may break existing code and detailed migration guides.
+- **Mock Methods API:** To understand the modern approach to mocking methods and the advantages of the new APIs.
+- **Nice, Naggy, Strict Mock API:** Details on strictness control for mocks.
+- **Migration Guides:** Step-by-step instructions to update codebases.
 
-Use the [Troubleshooting Common Issues](../../getting-started/validation-troubleshooting/common-issues) page for help.
-</Tip>
+See the [Version History](https://github.com/google/googletest/blob/main/docs/changelog/release-notes/version-history.md) for release context and timelines.
+
+---
+
+## Practical Tips
+
+- Start migration early upon announcement of deprecations to avoid last-minute rush.
+- Use compiler warnings as indicators of deprecated usage.
+- Leverage automated tools or static analyzers where possible to identify deprecated APIs.
+- Validate tests carefully after migration, paying attention to mock strictness behavior changes.
+
+---
+
+## Troubleshooting Deprecation Issues
+
+- **Deprecated Macro Warnings:** Verify that all mock macros follow the `MOCK_METHOD` syntax.
+- **Unexpected Call Errors After Switching to StrictMock:** Inspect whether uninteresting calls are properly expected, or add necessary `EXPECT_CALL`s.
+- **Build Failures Due to Compiler Version or Standard:** Upgrade your compiler and set your build to use C++17.
+
+Refer to the [Troubleshooting Common Setup Issues](https://github.com/google/googletest/blob/main/docs/getting-started/first-test-and-validation/troubleshooting-common-issues.md) for general help.
 
 ---
 
 ## Additional Resources
 
-- [Breaking Changes Overview](../changelog/breaking-changes-migrations/breaking-changes): A centralized list of all recent breaking changes and related migration instructions.
-- [Upgrade & Migration Guides](../changelog/breaking-changes-migrations/upgrade-guides): Detailed step-by-step instructions for migrating code across major versions.
-- [Mocking Reference](../api-reference/core-apis/mocking): For up-to-date mocking APIs and usage.
-- [gMock Cookbook](../guides/writing-and-running-tests/gmock_cook_book.md): Offers practical recipes including updates around deprecated items.
-- [System Requirements & Supported Platforms](../../getting-started/setup-foundations/system-requirements): Ensures compatibility with supported environments.
+- [Mock Methods API](https://github.com/google/googletest/blob/main/docs/api-reference/mocking-and-matcher-api/mock-methods-api.md)
+- [Nice, Naggy, Strict Mock API](https://github.com/google/googletest/blob/main/docs/api-reference/mocking-and-matcher-api/nice-naggy-strict-mock-api.md)
+- [Breaking Changes & Migrations](https://github.com/google/googletest/blob/main/docs/changelog/breaking-changes-migrations/breaking-changes.md)
+- [Migration Guides](https://github.com/google/googletest/blob/main/docs/changelog/breaking-changes-migrations/migration-guides.md)
+- [Version History](https://github.com/google/googletest/blob/main/docs/changelog/release-notes/version-history.md)
 
 ---
 
-Maintaining awareness of deprecations and planning timely migrations is essential for sustaining reliable, maintainable test suites using GoogleTest and GoogleMock. Stay proactive to enjoy smooth upgrades and leverage modern, robust testing constructs.
+## How to Contribute or Report a Deprecated Feature
+
+If you encounter undocumented deprecations or have suggestions for smoother migration, please contribute by submitting issues or pull requests at the [GoogleTest GitHub repository](https://github.com/google/googletest).
+
+---
+
+*Last updated on the `main` branch.*
+
+<Source url="https://github.com/google/googletest" paths={[{"path": "docs/changelog/breaking-changes-migrations/deprecations.md", "range": "all"}]} />
